--- a/roles/web/tasks/main.yml
+++ b/roles/web/tasks/main.yml
@@ -25,7 +25,7 @@
    dest: /var/www/html/
 
 - name: "Restart apache server"
-  firewalld:
+  service:
      name: httpd
      enabled: yes
      state: restarted
